--- a/mobileapp/app/src/main/res/values/colors.xml
+++ b/mobileapp/app/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
     <color name="error_red">#FF5252</color>
     <color name="blue">#2196F3</color>
     <color name="light_blue">#3DB8EF</color>
-    <color name="user1_color">#FF5722</color>
-    <color name="user2_color">#2196F3</color>
+    <color name="user1_color">#F87553</color>
+    <color name="user2_color">#6AB3F2</color>
     <color name="casual_mode_bg">#FF9800</color>
     <color name="formal_mode_background">#3F51B5</color>
     <color name="casual_mode_background">#FF9800</color>
