--- a/mobileapp/app/src/main/res/layout/activity_qr_scan.xml
+++ b/mobileapp/app/src/main/res/layout/activity_qr_scan.xml
@@ -20,9 +20,10 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/circle_background_white"
+        android:background="@drawable/glass_button_background"
         android:src="@drawable/ic_back"
-        android:tint="@android:color/black"
+        android:padding="12dp"
+        app:tint="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,13 +35,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded_background_semi_transparent"
+        android:background="@drawable/glass_background"
         android:gravity="center"
         android:padding="16dp"
         android:text="Scan a SpeakForge QR code to connect with another user"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="16sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/poppins_semibold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
