--- a/mobileapp/app/src/main/res/layout/user_connection_options_dialog.xml
+++ b/mobileapp/app/src/main/res/layout/user_connection_options_dialog.xml
@@ -39,7 +39,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Choose how you want to connect with other users"
+        android:text="Choose how you want to connect with other SpeakForge users"
         android:textAlignment="center"
         android:textColor="#757575"
         android:textSize="14sp"
