Enhance ConversationalActivity with flag icons and update development mode
- Added flag icons next to user language selections in ConversationalActivity for better visual representation.
- Introduced a new method, setFlagIcon, to manage flag icon display based on selected languages.
- Updated development mode flag in Variables.java to false for production readiness.
- Changed user2Language from "Tagalog" to "Bisaya" in Languages.java for improved localization.
- Modified main_gradient_background.xml for a refreshed color scheme.
- Adjusted layout parameters in fragment_basictranslation.xml and qr_code_share_dialog.xml for better UI alignment and aesthetics.

--- a/mobileapp/app/src/main/res/layout/fragment_basictranslation.xml
+++ b/mobileapp/app/src/main/res/layout/fragment_basictranslation.xml
@@ -37,6 +37,7 @@
                     android:layout_height="30dp"
                     android:src="@drawable/translator_icon_gemini"
                     android:layout_marginTop="4dp"
+                    android:layout_marginStart="10dp"
                     app:tint="@null"/>
 
                 <TextView
@@ -58,7 +59,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:textColor="#202020"
                 android:layout_marginTop="-10dp"
-                android:layout_marginStart="34dp"/>
+                android:layout_marginStart="44dp"/>
 
         </LinearLayout>
 
