Update UI components in ConversationalActivity and layout files
- Added rotation to user2's dropdown view for improved visual distinction.
- Removed unnecessary ImageViews from activity_conversational.xml to streamline layout.
- Converted item_conversational_message.xml from LinearLayout to ConstraintLayout for better layout management and responsiveness.
- Enhanced simple_spinner_item_custom.xml by making text bold for improved readability.

--- a/mobileapp/app/src/main/res/layout/item_conversational_message.xml
+++ b/mobileapp/app/src/main/res/layout/item_conversational_message.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
     android:padding="8dp">
 
     <FrameLayout
         android:id="@+id/bubbleContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:minWidth="80dp"
         android:padding="16dp"
         android:background="@drawable/speech_bubble_user1"
-        android:layout_marginEnd="8dp">
+        android:layout_marginEnd="8dp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnRegenerate"
+        app:layout_constraintHorizontal_bias="0">
 
         <TextView
             android:id="@+id/messageText"
@@ -42,6 +46,9 @@
         android:clickable="true"
         android:focusable="true"
         android:padding="4dp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
