--- a/mobileapp/app/src/main/res/layout/simple_spinner_item_custom.xml
+++ b/mobileapp/app/src/main/res/layout/simple_spinner_item_custom.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="16sp"
+    android:textStyle="bold"
     android:fontFamily="@font/poppins"
     android:textColor="#2196F3"
     android:paddingVertical="8dp"
